Fix missing whitespace

--- a/refinery/ui/source/styles/dashboard.less
+++ b/refinery/ui/source/styles/dashboard.less
@@ -1362,11 +1362,11 @@
           color: @gray-light;
           line-height: 1em;
           border-bottom: 1px solid lighten(@gray-light, 25%);
+        }
 
-          &:first-child {
-            margin-top: 0;
-            padding-top: 0;
-          }
+        .singleStudy div:first-child .refinery-subheader {
+          margin-top: 0;
+          padding-top: 0;
         }
 
         .scrollable {
